spec/e2e/variable/use_false_as_var.lit
# error: [line 2] Error at "false": I was expecting a variable name here.
let false = "value";
